--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim/vim.symlink/bundle/ack"]
 	path = vim/vim.symlink/bundle/ack
 	url = git@github.com:mileszs/ack.vim.git
+[submodule "vim/vim.symlink/bundle/VIM-Color-Picker"]
+	path = vim/vim.symlink/bundle/VIM-Color-Picker
+	url = git@github.com:vim-scripts/VIM-Color-Picker.git
