--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "vim/vim.symlink/bundle/vim-surround"]
 	path = vim/vim.symlink/bundle/vim-surround
 	url = git@github.com:tpope/vim-surround.git
+[submodule "vim/vim.symlink/bundle/vim-monokai"]
+	path = vim/vim.symlink/bundle/vim-monokai
+	url = git@github.com:sickill/vim-monokai.git
