Update tmux config

--- a/tmux/symlinks/tmux.conf
+++ b/tmux/symlinks/tmux.conf
@@ -1,11 +1,11 @@
 unbind C-b
 set -g prefix C-Space
-bind Space send-prefix
 
-bind r source-file ~/.tmux.conf \; display "OK I'm Reloaded"
+bind C-Space last-window
 
 bind Space copy-mode
-bind C-Space copy-mode
+
+bind r source-file ~/.tmux.conf \; display "OK I'm Reloaded"
 
 set -s escape-time 1
 
